# lapx

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  TODO.md
.plans/: implementation-plan.html
.plans/adr/: 0001-sqlite-rennprotokoll.md  0002-rust-server-static-ui.md
.plans/best-path/: index.html  plan.css  slice-01.html  slice-02.html  slice-03.html  slice-04.html  slice-05.html  slice-06.html  slice-07.html  slice-08.html  slice-09.html  slice-10.html  slice-11.html  slice-12.html  slice-13.html  slice-14.html  slice-15.html  slice-16.html  slice-17.html  slice-18.html  slice-19.html  slice-20.html  slice-21.html  slice-22.html  slice-23.html  slice-24.html  slice-25.html  slice-26.html
src/: debug.html  domain.rs  hardware.html  http.rs  lib.rs  runtime.rs  store.rs
src/domain/: engine.rs  finish.rs  model.rs  rules.rs  scheduler.rs  state.rs
src/hardware/: gpio.rs  mod.rs
src/http/: assets.rs  mod.rs
src/runtime/: dispatcher.rs
src/store/: tournament.rs
tests/: delivery_1.rs  delivery_10.rs  delivery_11.rs  delivery_12.rs  delivery_13.rs  delivery_14.rs  delivery_15.rs  delivery_16.rs  delivery_17.rs  delivery_18.rs  delivery_19.rs  delivery_19_security.rs  delivery_2.rs  delivery_20.rs  delivery_21.rs  delivery_22.rs  delivery_23.rs  delivery_24.rs  delivery_25.rs  delivery_26.rs  delivery_27.rs  delivery_3.rs  delivery_4.rs  delivery_5.rs  delivery_6.rs  delivery_7.rs  delivery_8.rs  delivery_9.rs
ui/: generate-public-assets.js  package-lock.json  package.json  svelte.config.js  verify-build.js
ui/src/: app.html
ui/tests/: render.test.js  (+1 more)
(+6 files in other folders)
