[package]
name = "lapx"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
